--- a/src/styles/VideoScene.css
+++ b/src/styles/VideoScene.css
@@ -21,11 +21,6 @@
   left: 9%;
   z-index: 1;
   border-radius: 8px;
-  opacity: 0;
-  transition: opacity 0.5s ease-out;
-}
-
-.player-wrapper.playing {
   opacity: 1;
 }
 
@@ -46,7 +41,7 @@
   height: 100%;
   object-fit: contain;
   z-index: 2;
-  will-change: transform, opacity;
+  will-change: transform;
   pointer-events: none;
   display: block;
 }
