--- a/src/styles/ChatScene.css
+++ b/src/styles/ChatScene.css
@@ -10,27 +10,27 @@
   perspective: 1000px;
 }
 
-.chat-messages {
-  width: 100%;
-  max-width: 700px;
+.comments-container {
+  width: 100%; /* Mehr Platz für die Nachrichten */
   position: relative;
+  max-width: 800px;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  align-items: center;
   margin-top: 1rem;
   padding-top: 1rem;
-  height: 100%;
   overflow: hidden;  /* Verhindert Scrolling */
-  padding-bottom: 2rem; /* Mehr Platz am unteren Rand */
-  margin-left: auto;    /* Horizontales Centering */
-  margin-right: auto;   /* Horizontales Centering */
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0rem;   /* Platz für die Nachrichten */
+  padding-right: 0rem;
 }
 
 .comment {
-  width: 100%;
-  max-width: 600px;
+  width: 100%;        /* Etwas schmaler für mehr Platz */
   padding: 1rem;
+  max-width: 600px;
   border-radius: 12px;
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
@@ -39,21 +39,17 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   will-change: transform, opacity;
   position: absolute;
-  left: 0;
-  right: 0;
-  transform: translateZ(0);
+  transform: translateX(0) translateZ(0);  /* Performance-Optimierung */
 }
 
 .comment.left {
   align-self: flex-start;
-  margin-right: 10%;
-  left: 1rem;
+  transform: translateX(5%);  /* Verschiebung nach links */
 }
 
 .comment.right {
   align-self: flex-end;
-  margin-left: 10%;
-  right: 1rem;
+  transform: translateX(-5%);   /* Verschiebung nach rechts */
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -107,6 +103,6 @@
   color: white;
   font-weight: 600;
   cursor: pointer;
-  margin-bottom: 1rem;
+  margin-bottom: 5rem;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
 } 
