--- a/src/styles/WelcomePage.css
+++ b/src/styles/WelcomePage.css
@@ -11,8 +11,9 @@
 .welcome-container {
   max-width: 1200px;
   width: 100%;
-  padding: 0 2rem;
+  padding: 0;
   position: relative;
+  margin: 0 auto;
 }
 
 .navigation {
@@ -138,7 +139,7 @@
 
 @media (max-width: 768px) {
   .welcome-container {
-    padding: 0 1rem;
+    padding: 0;
   }
 
   .navigation {
