--- a/src/styles/AvocadoScene.css
+++ b/src/styles/AvocadoScene.css
@@ -197,7 +197,7 @@
   }
 
   .equals {
-    font-size: 3rem;
+    font-size: 6rem;
     margin: 0.5rem 0;
   }
 }
@@ -215,8 +215,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  justify-content: center;
   margin-top: 2rem;
-  padding-right: 2rem;
+  text-align: center;
 }
 
 .comparison-text {
@@ -228,7 +229,7 @@
 }
 
 .water-text {
-  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-size: clamp(3rem, 2vw, 1.5rem);
   color: var(--text-secondary);
   font-family: var(--font-amatic);
 }
