--- a/src/styles/AudioScene.css
+++ b/src/styles/AudioScene.css
@@ -39,12 +39,11 @@
   width: 100%;
   max-width: 1000px;
   overflow: hidden;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 
 .text {
   font-family: var(--font-amatic);
-  font-size: 4.5rem;
+  font-size: clamp(5rem, 6vw, 2.5rem);
   line-height: 1.4;
   color: white;
   text-align: center;
@@ -94,33 +93,6 @@
   transform-style: preserve-3d;
 }
 
-.play-button {
-  position: fixed;
-  bottom: 2rem;
-  left: 50%;
-  transform: translateX(-50%);
-  padding: 1rem 2rem;
-  font-size: 1.1rem;
-  background-color: rgba(255, 255, 255, 0.9);
-  color: var(--color-text);
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-  transition: all 0.2s ease;
-  z-index: 100;
-  -webkit-tap-highlight-color: transparent; /* Entfernt den Tap-Highlight auf iOS */
-}
-
-.play-button:hover {
-  transform: translateX(-50%) translateY(-2px);
-  box-shadow: 0 6px 8px rgba(0,0,0,0.15);
-}
-
-.play-button:active {
-  transform: translateX(-50%) translateY(0);
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-}
 
 /* Touch-Geräte Optimierungen */
 @media (hover: none) {
