--- a/src/styles/WelcomePage.css
+++ b/src/styles/WelcomePage.css
@@ -25,6 +25,7 @@
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  color: var(--color-primary-dark);
 }
 
 .logo {
@@ -42,7 +43,7 @@
 .nav-links a {
   font-family: var(--font-amatic);
   font-size: 1.5rem;
-  color: white;
+  color: var(--color-primary-dark);
   text-decoration: none;
   transition: opacity 0.2s ease;
   will-change: transform, opacity;
@@ -92,11 +93,12 @@
 
 .welcome-text {
   text-align: left;
+  color: white;
 }
 
 .welcome-text h1 {
   font-family: var(--font-amatic);
-  font-size: 4.5rem;
+  font-size: clamp(5rem, 6vw, 3rem);
   margin: 0 0 1.5rem 0;
   font-weight: 700;
   line-height: 1;
@@ -105,7 +107,7 @@
 
 .main-text {
   font-family: var(--font-amatic);
-  font-size: 2rem;
+  font-size: clamp(3rem, 5vw, 2rem);
   margin-bottom: 1.5rem;
   line-height: 1.3;
   will-change: transform, opacity;
@@ -117,24 +119,7 @@
   opacity: 0.8;
   margin-bottom: 2.5rem;
   will-change: transform, opacity;
-}
-
-.start-button {
-  font-family: var(--font-amatic);
-  font-size: 1.5rem;
-  color: white;
-  background: transparent;
-  border: 2px solid white;
-  padding: 0.5rem 2.5rem;
-  border-radius: 50px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  will-change: transform, opacity, background;
-}
-
-.start-button:hover {
-  background: rgba(255, 255, 255, 0.1);
-  transform: translateY(-2px);
+  color: var(--color-primary-dark);
 }
 
 @media (max-width: 768px) {
